# mvvm-skills-pack

./: LICENSE  MANIFEST.md  README.md
install/claude-code/: install.ps1
install/codex/: install.ps1
install/opencode/: install.ps1
skills/companions/design-taste-frontend/: SKILL.md
skills/companions/ui-ux-pro-max/: SKILL.md
skills/core/create-mvvm-project/: SKILL.md
skills/core/create-mvvm-project/agents/: openai.yaml
skills/core/create-mvvm-project/assets/framework-template/: CMakeLists.txt  CMakePresets.json  README.md
skills/core/create-mvvm-project/assets/framework-template/app/: AppContext.cpp  AppContext.h  CMakeLists.txt
skills/core/create-mvvm-project/assets/framework-template/app/log/: Logger.cpp  Logger.h
skills/core/create-mvvm-project/assets/framework-template/core/: CMakeLists.txt  MediatorCoreConfig.cmake.in
skills/core/create-mvvm-project/assets/framework-template/core/actor/: ActorObserve.cpp  ActorObserve.h
skills/core/create-mvvm-project/assets/framework-template/core/mediator/: Mediator.cpp  Mediator.h  Observe.cpp  Observe.h  Topic.cpp  Topic.h
skills/core/create-mvvm-project/assets/framework-template/core/model/: BaseModel.cpp  BaseModel.h  IModel.h  LogEntry.h
skills/core/create-mvvm-project/assets/framework-template/core/policy/: AlwaysPolicy.h  ISubscriptionPolicy.h  ValueChangedPolicy.h
skills/core/create-mvvm-project/assets/framework-template/core/viewmodel/: BaseViewModel.h
skills/core/create-mvvm-project/assets/framework-template/demo/: CMakeLists.txt
skills/core/create-mvvm-project/assets/framework-template/demo/sinewave/: CMakeLists.txt  SineModel.cpp  SineModel.h  SineView.cpp  SineView.h  SineViewModel.cpp  SineViewModel.h  main.cpp
skills/core/create-mvvm-project/assets/framework-template/ext/: CMakeLists.txt
skills/core/create-mvvm-project/assets/framework-template/ext/binding/: Binding.h  BindingHelper.h  CMakeLists.txt  binding_autogen.cpp
skills/core/create-mvvm-project/assets/framework-template/ext/logging/: CMakeLists.txt  LogListView.cpp  LogListView.h  LogListView.ui  LogListViewModel.cpp  LogListViewModel.h  LogModel.cpp  LogModel.h
skills/core/create-mvvm-project/assets/framework-template/model/modbus/: ModbusMasterModel.cpp  ModbusMasterModel.h  ModbusModuleBase.cpp  ModbusModuleBase.h  PidPressureModule.cpp  PidPressureModule.h  PointDef.h
skills/core/create-mvvm-project/assets/framework-template/tests/: CMakeLists.txt  MediatorBenchmark.cpp  ModbusModuleTests.cpp  SinewaveDemoTests.cpp  TopicPolicyTests.cpp
skills/core/create-mvvm-project/scripts/: create_project.py
skills/core/design-mediator-message/: SKILL.md
skills/core/design-mediator-message/agents/: openai.yaml
skills/core/design-mediator-policy/: SKILL.md
skills/core/design-mediator-policy/agents/: openai.yaml
skills/core/design-mvvm-framework/: SKILL.md
skills/core/design-mvvm-framework/agents/: openai.yaml
skills/core/refactor-to-mvvm-project/: SKILL.md
skills/core/refactor-to-mvvm-project/agents/: openai.yaml
skills/core/write-app-bootstrapper/: SKILL.md
skills/core/write-app-bootstrapper/agents/: openai.yaml
skills/core/write-model/: SKILL.md
skills/core/write-model/agents/: openai.yaml
skills/core/write-view/: SKILL.md
skills/core/write-view-style/: SKILL.md
skills/core/write-view-style/agents/: openai.yaml
skills/core/write-view/agents/: openai.yaml
skills/core/write-viewmodel/: SKILL.md
skills/core/write-viewmodel/agents/: openai.yaml
skills/governance/project-design/: SKILL.md
skills/governance/project-design/agents/: openai.yaml
skills/governance/project-implementation/: SKILL.md
skills/governance/project-implementation/agents/: openai.yaml
skills/governance/project-message-design/: SKILL.md
skills/governance/project-message-design/agents/: openai.yaml
skills/governance/project-mvvm-contract/: SKILL.md
skills/governance/project-mvvm-contract/agents/: openai.yaml
skills/governance/project-planning/: SKILL.md
skills/governance/project-planning/agents/: openai.yaml
skills/governance/project-retrospective/: SKILL.md
skills/governance/project-retrospective/agents/: openai.yaml
skills/governance/project-review/: SKILL.md
skills/governance/project-review/agents/: openai.yaml
skills/governance/project-verification/: SKILL.md
skills/governance/project-verification/agents/: openai.yaml
